--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -5422,7 +5422,7 @@
     }
    ],
    "source": [
-    "#Mean Squared Error to assess fit of model\n",
+    "#Root Mean Squared Error to assess fit of model\n",
     "print('RMSE:', np.sqrt((1/len(X))*(errors ** 2).sum()))"
    ]
   },
@@ -5430,7 +5430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no 'correct' Mean Squared Error. The model's MSE is ~ 4.5 units from a perfect fit (MSE=0)"
+    "The Simple Linear Regression Model's RMSE is ~ 2.0853 units from a perfect fit (RMSE=0)"
    ]
   },
   {
@@ -5456,6 +5456,15 @@
    "metadata": {},
    "source": [
     "R Squared is closer to 0 than it is to 1. This indicates that the regression does not explain much of the variability in the response."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conslusion\n",
+    "\n",
+    "Our assessment of the Simple Linear Regression model showed an unsatisfactory RMSE of 2.08 when tested on the 20% unseeen data. This is not in-line with our goal. We will continue to investigate more regression models to see if we can build one that makes even more precise predictions."
    ]
   },
   {
@@ -5488,7 +5497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5498,7 +5507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5508,7 +5517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
@@ -5519,7 +5528,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5531,14 +5540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: -583872393.4736632\n"
+      "Intercept: 1146807276.6419442\n"
      ]
     }
    ],
@@ -5550,7 +5559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -5580,31 +5589,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Weight_Kg</th>\n",
-       "      <td>1.946241e+08</td>\n",
+       "      <td>-3.822691e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total_Qty_Sold</th>\n",
-       "      <td>-2.417570e-04</td>\n",
+       "      <td>-2.462712e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Stock_On_Hand</th>\n",
-       "      <td>-7.710693e-05</td>\n",
+       "      <td>-7.622519e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_EASTERN_CAPE</th>\n",
-       "      <td>-1.648677e+00</td>\n",
+       "      <td>-1.648599e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_NATAL</th>\n",
-       "      <td>-2.519208e+00</td>\n",
+       "      <td>-2.519189e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_ORANGE_FREE_STATE</th>\n",
-       "      <td>-2.007917e+00</td>\n",
+       "      <td>-2.007895e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Province_TRANSVAAL</th>\n",
-       "      <td>-1.230725e+00</td>\n",
+       "      <td>-1.230590e+00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5612,16 +5621,16 @@
       ],
       "text/plain": [
        "                             Coefficient\n",
-       "Weight_Kg                   1.946241e+08\n",
-       "Total_Qty_Sold             -2.417570e-04\n",
-       "Stock_On_Hand              -7.710693e-05\n",
-       "Province_EASTERN_CAPE      -1.648677e+00\n",
-       "Province_NATAL             -2.519208e+00\n",
-       "Province_ORANGE_FREE_STATE -2.007917e+00\n",
-       "Province_TRANSVAAL         -1.230725e+00"
+       "Weight_Kg                  -3.822691e+08\n",
+       "Total_Qty_Sold             -2.462712e-04\n",
+       "Stock_On_Hand              -7.622519e-05\n",
+       "Province_EASTERN_CAPE      -1.648599e+00\n",
+       "Province_NATAL             -2.519189e+00\n",
+       "Province_ORANGE_FREE_STATE -2.007895e+00\n",
+       "Province_TRANSVAAL         -1.230590e+00"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5641,7 +5650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5652,14 +5661,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The RMSE of the test data is: 1.3554851896414988\n"
+      "The RMSE of the test data is: 1.35556092708849\n"
      ]
     }
    ],
@@ -5759,27 +5768,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>8.792190</td>\n",
+       "      <td>8.696146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>9.130824</td>\n",
+       "      <td>9.018347</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>8.431388</td>\n",
+       "      <td>8.387762</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>7.715322</td>\n",
+       "      <td>7.642698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>8.304850</td>\n",
+       "      <td>8.216034</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5787,11 +5796,11 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          8.792190\n",
-       "1      2          9.130824\n",
-       "2      3          8.431388\n",
-       "3      4          7.715322\n",
-       "4      5          8.304850"
+       "0      1          8.696146\n",
+       "1      2          9.018347\n",
+       "2      3          8.387762\n",
+       "3      4          7.642698\n",
+       "4      5          8.216034"
       ]
      },
      "execution_count": 81,
